# External-Tracking

./: .gitignore
external_tracking/: generate_aruco_marker.py
install/: local_setup.sh  setup.sh
install/tracking_bringup/share/tracking_bringup/: package.xml
log/: latest_build
tracking_assets/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tracking_assets/log/: latest_build
tracking_assets/models/overhead_camera/: model.config  model.sdf
tracking_assets/models/templates/turtlebot3_burger_aruco/: model.config  model.sdf
tracking_assets/models/warehouse_world/: model.sdf
tracking_assets/worlds/: turtlebot3_world.world
tracking_bringup/: package.xml  setup.cfg  setup.py
tracking_bringup/tracking_bringup/: aruco_detector.py  aruco_odom_ground_truth_logger.py  ground_truth_from_tf.py  square_pose_pid_controller.py  square_trajectory_logger.py
tracking_evaluation/: analysis.ipynb
